--- a/Css/register.css
+++ b/Css/register.css
@@ -12,7 +12,6 @@ body {
 /*navbar*/
 nav {
   z-index: 10;
-  /* background-color: var(--b-color); */
   transition: 0.3s;
   color: var(--w-color);
 }
@@ -71,11 +70,6 @@ nav {
   margin-bottom: 5px;
   font-size: 18px;
 }
-
-/* Tutor */
-/* #tutor {
-  /* height: 100vh; */
-
 #tutor .kiri {
   border-radius: 10px;
   text-align: left;
@@ -83,6 +77,7 @@ nav {
 
 #tutor .pilihan {
   margin-bottom: 10px;
+  width: 100%;
   background-color: white;
   box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
@@ -98,27 +93,21 @@ nav {
 }
 #tutor a {
   text-decoration: none;
-  /* position: relative; */
   color: #000;
-  width: 100%;
   font-size: 16px;
 }
 #tutor .kanan {
   background-color: var(--w-color);
   border-radius: 10px;
-  /* width: 100%; */
-  /* text-align: center; */
   height: 800px;
   box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.5);
   overflow: auto;
   scroll-behavior: smooth;
-  /* color: --; */
 }
 #tutor .kanan p {
   font-weight: 500;
   margin-top: 20px;
   font-size: 16px;
-  /* color: #fff; */
 }
 #tutor .kanan ul {
   display: inline-block;
@@ -197,6 +186,7 @@ nav {
 /* footer */
 footer {
   background-color: #000c1b;
+  position: relative;
 }
 footer h1 {
   font-size: 24px;
@@ -252,7 +242,7 @@ footer ion-icon {
   font-size: 50px;
   z-index: 2;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .go-top {
     display: block;
   }
